--- a/package.json
+++ b/package.json
@@ -14,8 +14,23 @@
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "enquirer": "^2.4.1",
+    "express": "^4.18.3",
+    "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
+    "minimist": "^1.2.8",
+    "open": "^10.1.0",
     "ora": "^8.0.1",
-    "slugify": "^1.6.6"
+    "rehype-katex": "^7.0.0",
+    "rehype-parse": "^9.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "slugify": "^1.6.6",
+    "ws": "^8.16.0"
   }
 }
