--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
+    "cors": "^2.8.5",
     "enquirer": "^2.4.1",
     "express": "^4.18.3",
     "front-matter": "^4.0.2",
